# api/src/infrastructure/mongo/documents/mongo.transaction.document.ts
@@ -6,7 +6,7 @@ export type MongoTransactionDocument = {
     name: string;
     value: number;
     type: 'income' | 'expense';
-    category?: 'need' | 'want' | 'investment';
+    category: 'need' | 'want' | 'investment' | null;
     date: Date;
     createdAt: Date;
     updatedAt: Date;
